--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>  
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>jQuery</title>
-        <meta name="description" content="A full history or the San Antonio Spurs">
+        <title>Hat Catalog</title>
+        <meta name="description" content="A catalog of all my hats">
         <link rel="stylesheet" href="styles.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         
